# CPU-OpenGL

./: CMakeLists.txt  LICENSE  readme.md
benchmarks/: barycoords.cpp  texturing.cpp
examples/: aapoly.cpp  fog.cpp  stencil.cpp  texbind.cpp  varray.cpp  viewport.cpp
src/backends/glx/: GLXConfig.cpp  GLXConfig.h  glx.cpp  glx.h
src/backends/wgl/: wgl.cpp  wgl.h
src/dataStructures/: array.h  map.h  optional.h  set.h  stack.h  string.h  vector.h  vectors.h
src/ogl/: GLContext.cpp  GLContext.h  ogl.h  ogl_alpha.cpp  ogl_alpha.h  ogl_begin.cpp  ogl_begin.h  ogl_buffers.cpp  ogl_buffers.h  ogl_common.cpp  ogl_common.h  ogl_constants.h  ogl_matrices.cpp  ogl_matrices.h  ogl_shared.cpp  ogl_shared.h  ogl_stencil.cpp  ogl_stencil.h  ogl_textures.cpp  ogl_textures.h  ogl_types.h  ogl_unimplemented.cpp  ogl_unimplemented.h
src/renderer/: GenericBuffer.cpp  GenericBuffer.h  MatrixStacks.h  Rasterizer.cpp  Rasterizer.h  Renderer.cpp  Renderer.h  Vertex.h
src/renderer/framebuffer/: ColorCell.h  FrameBuffer.cpp  FrameBuffer.h
src/renderer/geometry/: Line.cpp  Line.h  Triangle.h
src/renderer/textures/: Texture.cpp  Texture.h
src/utility/: Random.cpp  Random.h  print.h
src/utility/time/: Stopwatch.cpp  Stopwatch.h
